--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,16 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+.display{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-size: 5rem;
+}
