--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,26 @@
     box-sizing: border-box;
 }
 
-body{
+h1{
+    text-align: center;
+    font-size: 5rem;
+    padding-top: 50px;
+}
+h2{
+    text-align: center;
+    font-size: 3rem;
+}
+.container{
     display: flex;
     justify-content: center;
     align-content: center;
 }
 .display{
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     font-size: 5rem;
+    height: 100%;
 }
 
